--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,10 @@ jobs:
     - name: Run node
       run: node src/index.js
 
-    - name: Commit result
-      uses: EndBug/add-and-commit@v9
+    - name: push output
+      uses: crazy-max/ghaction-github-pages@v3.1.0
       with:
-        add: 'output.png'
-        commit: --signoff
-        default_author: github_actions
-        message: 'upd'
-        new_branch: output
+        target_branch: output
+        build_dir: dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
