--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,17 @@ jobs:
     - name: Run node
       run: node src/index.js
 
-    # - name: push output
-    #   uses: crazy-max/ghaction-github-pages@v3.1.0
-    #   with:
-    #     target_branch: output
-    #     build_dir: dist
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Push output
-      run: |
-        git config --global user.name 'WorldHim'
-        git config --global user.email 'worldhim@users.noreply.github.com'
-        git add output.png
-        git commit -am "upd"
-        git push
+    - name: push output
+      uses: crazy-max/ghaction-github-pages@v3.1.0
+      with:
+        target_branch: output
+        build_dir: .
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Push output
+    #   run: |
+    #     git config --global user.name 'WorldHim'
+    #     git config --global user.email 'worldhim@users.noreply.github.com'
+    #     git add output.png
+    #     git commit -am "upd"
+    #     git push
