--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
   push:
   workflow_dispatch:
 
+env:
+  URL1: 'https://files.mcimirror.top/dashboard'
+  OUTPUT1: 'output.png'
+
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -29,7 +33,7 @@ jobs:
         sudo fc-cache -f -v
     
     - name: Run node
-      run: node src/index.js
+      run: node src/index.js --u=$URL1 --o=$OUTPUT1
 
     - name: push output
       uses: crazy-max/ghaction-github-pages@v3.1.0
@@ -38,10 +42,3 @@ jobs:
         build_dir: .
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    # - name: Push output
-    #   run: |
-    #     git config --global user.name 'WorldHim'
-    #     git config --global user.email 'worldhim@users.noreply.github.com'
-    #     git add output.png
-    #     git commit -am "upd"
-    #     git push
